Adiciona documentação do swagger no metodo update de procut
